fix: update background color of app-full-view to improve contrast

--- a/src/appInit.scss
+++ b/src/appInit.scss
@@ -58,7 +58,7 @@
 
   .app-full-view {
     position: fixed !important;
-    background-color: var(--bs-gray-800) !important;
+    background-color: var(--bs-gray-900) !important;
     top: 0 !important;
     left: 0 !important;
     width: 100vw !important;
